# PIP-OS

./: .gitignore  .gitlab-ci.yml  AppImageBuilder.yml  BootSequence.qml  CMakeLists.txt  LICENSE  Main.qml  MainLayout.qml  MainNavigation.qml  MainState.qml  PageData.qml  PageInv.qml  PageItem.qml  PageMap.qml  PageRadio.qml  PageStat.qml  PipOS.service  README.md  SubMenu.qml  TabCollections.qml  TabEffects.qml  TabInventory.qml  TabRadio.qml  TabStatus.qml  inputeventhandler.cpp  inputeventhandler.h  inventory.cpp  inventoryitem.cpp  inventoryitem.h  inventorymodel.cpp  main.cpp  main.qml
apps/AtomicCommand/: CMakeLists.txt  Main.qml  atomiccommand.cpp  atomiccommand.h
components/: ItemStat.qml  ProgressBar.qml
drivers/hid/: README.md  pipboy-control.dts  pipboy.dts
drivers/hid/devicetree/: pipboy-control.dts
drivers/hid/uinput/: Makefile  control-daemon.c  pipboy-control.service  pipboy-hid.service
hack/: build.sh  cross_compile.sh
inc/public/PipOS/: app.h  bootscreen.h  buttons.h  dataprovider.h  dweller.h  events.h  gpio.h  hardwareinput.h  hid.h  holotape.h  inventory.h  radio.h  settings.h
qml/: BootSequence.qml  HealthBar.qml
qml/Components/: FrequencyGraph.qml  ItemStat.qml
qml/JSONListModel/: JSONListModel.qml  README.md  json-query.js  jsonpath-plus.js
qml/Layout/: BootSequence.qml  MainLayout.qml  MainNavigation.qml  MainNavigationTab.qml  MainState.qml  SubMenu.qml
qml/Pages/: PageData.qml  PageItem.qml  PageMap.qml  PageRadio.qml  PageStat.qml
qml/Pages/DATA/: DATA.qml  Quests.qml
qml/Pages/ITEM/: ITEM.qml  Inventory.qml
qml/Pages/MAP/: MAP.qml
qml/Pages/RADIO/: FMRadio.qml  RADIO.qml
qml/Pages/STAT/: Collections.qml  Effects.qml  STAT.qml  Special.qml  Status.qml
qml/Programs/: AtomicCommand.qml
qml/Tabs/: FrequencyGraph.qml  TabCollections.qml  TabEffects.qml  TabInventory.qml  TabQuests.qml  TabRadio.qml  TabSpecial.qml  TabStatus.qml
settings/: InterfaceSettings.qml
src/: app.cpp  app.h  bootscreen.cpp  bootscreen.h  buttons.cpp  dataprovider.cpp  dataprovider.h  dweller.cpp  dweller.h  events.cpp  events.h  gpio.cpp  hardwareinput.cpp  hid.cpp  holotape.cpp  holotape.h  inventory.cpp  itemstats.cpp  itemstats.h  keyboardinput.cpp  radio.cpp  radio.h  settings.cpp  settings.h
